fix mobile center align

--- a/src/app/projects/projects.module.css
+++ b/src/app/projects/projects.module.css
@@ -37,4 +37,5 @@
   text-align: -webkit-center;
   gap: 50px;
   padding: 20px;
+  place-content: center;
 }
